// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children when passed in successfully 1`] = `
<styled.svg
  viewBox="0 0 500 300"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <clipPath
      id="clip-path-svg"
    >
      <rect
        height={280}
        width={490}
        x={0}
        y={10}
      />
    </clipPath>
  </defs>
  <g
    clipPath="url(#clip-path-svg)"
  >
    <rect
      height={200}
      width={100}
      x={0}
      y={10}
    />
    <circle
      cx={300}
      cy={100}
      r={100}
    />
  </g>
</styled.svg>
`;

exports[`renders successfully 1`] = `
<styled.svg
  viewBox="0 0 600 600"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <clipPath
      id="clip-path-svg"
    >
      <rect
        height={560}
        width={580}
        x={0}
        y={20}
      />
    </clipPath>
  </defs>
  <g
    clipPath="url(#clip-path-svg)"
  />
</styled.svg>
`;
